--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
-    <title>Simple form</title>
+    <title>Duck Form</title>
 </head>
 
 <body>
@@ -16,15 +16,15 @@
             <img src="images/hiclipart.png" class="duck" alt="Duck">
             <div class="name">
                 <form action="">
-                    <label class="name">FULL NAME</label>
-                    <input type="text" class="input input-name">
-                    <label class="name">EMAIL</label>
-                    <input type="email" class="input input-email" placeholder="Your email">
+                    <label class="name" for="name">FULL NAME</label>
+                    <input class="input input-name input-hover" type="text" id="name" required="">
+                    <label class="name" for="email">EMAIL</label>
+                    <input class="input input-email" type="email" id="email" placeholder="Your email" required="">
                     <label class="name label">MESSAGE REGARDING</label>
-                    <input type="text" class="input input-msg">
+                    <input type="text" class="input input-msg" required="">
                     <label class="name">MESSAGE</label>
                     <input type="text" class="input input-urmsg" placeholder="Your Message">
-                    <button type="SEND MESSAGE" class="btn-msg">SEND MESSAGE</button>
+                    <button type="submit" class="btn-msg">SEND MESSAGE</button>
                 </form>
             </div>
         </div>
